[gd_scene load_steps=8 format=3 uid="uid://bffn6n6gayotv"]

[ext_resource type="Texture2D" uid="uid://cedqpvmc4d62g" path="res://img/general/menu back.png" id="1_jix8l"]
[ext_resource type="Script" uid="uid://cugeaa5fo22vm" path="res://scenes/main_menu/main_menu.gd" id="1_thkx5"]
[ext_resource type="Theme" uid="uid://d153qfgnveiau" path="res://themes/cartoon_theme.tres" id="2_wem23"]
[ext_resource type="Texture2D" uid="uid://etl3owp411kf" path="res://img/general/menu_button_1.png" id="4_4xg86"]
[ext_resource type="Texture2D" uid="uid://crryk6b6colk2" path="res://img/general/menu_button_2.png" id="6_thkx5"]
[ext_resource type="Texture2D" uid="uid://cbl7bma2ecmf8" path="res://img/general/menu_button_3.png" id="7_x2yjq"]
[ext_resource type="Texture2D" uid="uid://cqkdmbl42oixb" path="res://img/general/menu_button_4.png" id="8_lqpn7"]

[node name="MainMenu" type="Control" node_paths=PackedStringArray("continue_button")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_thkx5")
continue_button = NodePath("VBoxContainer/Button1")

[node name="MenuBack" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_jix8l")

[node name="VBoxContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -540.0
offset_top = -179.0
offset_right = -207.0
offset_bottom = 40.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_wem23")

[node name="Button1" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.5
offset_top = -21.0
offset_right = 158.5
offset_bottom = 39.0
grow_horizontal = 2
texture_normal = ExtResource("4_4xg86")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Button1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.5
offset_top = -22.0
offset_right = 80.5
offset_bottom = 7.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0907571
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Continue"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button2" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -170.5
offset_top = 18.0
offset_right = 129.5
offset_bottom = 78.0
grow_horizontal = 2
texture_normal = ExtResource("6_thkx5")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -13.0
offset_right = 70.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0802851
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "New game"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button3" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(300, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -166.5
offset_top = 77.0
offset_right = 133.5
offset_bottom = 127.0
grow_horizontal = 2
texture_normal = ExtResource("7_x2yjq")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -15.0
offset_right = 75.0
offset_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0471239
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button4" type="TextureButton" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -183.5
offset_top = 124.0
offset_right = 116.5
offset_bottom = 174.0
grow_horizontal = 2
texture_normal = ExtResource("8_lqpn7")
ignore_texture_size = true
stretch_mode = 5

[node name="Label" type="Label" parent="VBoxContainer/Button4"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -57.5
offset_top = -19.0
offset_right = 91.5
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
rotation = 0.0471239
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Quit"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="VBoxContainer/Button1" to="." method="on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="on_new_game_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="VBoxContainer/Button2" method="_on_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="on_quit_pressed"]
